# Harden-Windows-Security

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Harden-Windows-Security-GUI.ps1  Harden-Windows-Security.ps1  Hardening-Script-Github.ps1  LICENSE  Mega WDAC Function.ps1  README.md  Rationale.md  Readme2.md  Resources.tr-TR.resw  SECURITY.md  Version.txt  WDAC-Module.ps1  azure-pipelines.yml  hardware security
AppControl Manager/: .editorconfig  App.xaml  App.xaml.cs  App.xaml_ACM.cs  AppControl Manager.csproj  AppControl Manager.sln  AppControl Manager.slnx  AppControlManagerAPIDocumentation.xml  Cargo.toml  Crumb.cs  Directory.Build.props  DownloadURL.txt  MSIXBundleDownloadURL.txt  MainWindow.NotificationArea.cs  MainWindow.xaml  MainWindow.xaml.cs  MyRoots.xml  NativeMethods.cs  NativeMethods.json  NativeMethods.txt  NativeMethods_RustInterop.cs  Package.StoreAssociation.xml  Package.appxmanifest  Package.appxmanifest-Store  ReleaseNotes.txt  app.manifest  exclusion.dic  global.json  nuget.config  version.txt
AppControl Manager/Analysis/: FileIdentityAnalysis.cs
AppControl Manager/Animated Icon Sources/: Blueprint.json  Cancel.json  Certificate.json  Confetti.json  Configure.json  CurlyArrow.json  Deny.json  Deployment.json  Document.json  GitHub.json  Hash.json  Heart.json  HeartPulse.json  Home.json  Light.json  Logout.json  MDE.json  Merge.json  MicrosoftCloud.json  Refresh.json  Scan.json  Select.json  Shield.json  Sidebar.json  SignIn.json  Simulation.json  StarBlack.json  StarYellow.json  SupplementalPolicy.json  Timeline.json  TrashCan.json  Validate.json  View.json  ViewAllCertificates.json  dotsload.json  honeymoon.json  launch.json  scales.json  sparklingDiamond.json
AppControl Manager/Animated Icons/: Blueprint.cs  Cancel.cs  Certificate.cs  Configure.cs  CurlyArrow.cs  Deployment.cs  Document.cs  GitHub.cs  Home.cs  Logout.cs  MDE.cs  Merge.cs  Select.cs  Shield.cs  SignIn.cs  SparklingDiamond.cs  StarYellow.cs  TrashCan.cs  View.cs
AppControl Manager/AppManifests/: WinCMD-Manifest.xml  WinPS-Manifest.xml
AppControl Manager/AppSettings/: AppSettings.cs  AppSettingsCls.cs  AppThemeManager.cs  IconsStyleManager.cs  Main.cs  NavigationBackgroundManager.cs  NavigationViewLocationManager.cs  SoundManager.cs  ThemeManager.cs
AppControl Manager/CustomUIElements/: AnimatedCancellableButton.cs  AppWindowBorderCustomization.cs  ButtonV2.cs  ColorRadialGaugeV2.cs  ColumnSelector.xaml  ColumnSelector.xaml.cs  ContentDialogV2.cs  CustomPatternBasedFilePath.xaml  CustomPatternBasedFilePath.xaml.cs  CustomPoliciesLibraryCacheLocationManagerDialog.xaml  CustomPoliciesLibraryCacheLocationManagerDialog.xaml.cs  GraphAuthPanel.xaml  GraphAuthPanel.xaml.cs  GuideButton.xaml  GuideButton.xaml.cs  InfoBarV2.cs  InteractiveLineChart.xaml  InteractiveLineChart.xaml.cs  IntuneCheckInButton.xaml.cs  ListBoxV2.xaml  ListBoxV2.xaml.cs  ListViewV2.cs  ListViewV3.cs  ListViewV4.cs  MenuFlyoutV2.cs  OpenPortsDialog.xaml  OpenPortsDialog.xaml.cs  ScanLevelResources.xaml  ScanLevelResources.xaml.cs  SettingsCardV2.cs  SettingsCardV3.cs  SettingsControls.xaml  SigningDetailsDialog.xaml  SigningDetailsDialog.xaml.cs  SigningDetailsDialogForRemoval.xaml  SigningDetailsDialogForRemoval.xaml.cs  StickyHeaderBehaviorV2.cs  SystemShutdownInfoDialog.xaml  SystemShutdownInfoDialog.xaml.cs  TemporalPolarChart.xaml  (+1 more)
AppControl Manager/Excluded Code/: FileDialogHelper unmanaged version.cs  FileDialogHelper.cs  FileDirectoryPathComparer.cs  PostProcessor.cs  SecureStringComparer.cs  VersionIncrementer.cs
AppControl Manager/IncrementalCollection/: FileIdentityIncrementalSource.cs  GenericIncrementalCollection.cs  HighPerfIncrementalCollection.cs  IncrementalCollection.cs  RangedObservableCollection.cs
AppControl Manager/IntelGathering/: CILogIntel.cs  CatRootScanner.cs  CertCNFetcher.cs  CertificatePresence.cs  DriveLetterMapper.cs  EventAction.cs  FileIdentity.cs  FileIdentityComparer.cs  FileIdentityECCBasedHashSet.cs  FileIdentityOrigin.cs  FileIdentitySignatureBasedHashSet.cs  FileIdentityTimeBasedHashSet.cs  FileSignerInfo.cs  FileSignerInfoComparer.cs  FirewallEvent.cs  GetEventLogsData.cs  GetFirewallLogs.cs  GetMDEAdvancedHuntingLogsData.cs  InferCertificatePresence.cs  KernelModeDrivers.cs  KernelUserVerdict.cs  LocalFilesScan.cs  MDEAdvancedHuntingData.cs  OptimizeMDECSVData.cs  PlatformInvocations.cs  PrepareEmptyPolicy.cs  ScanLevels.cs  SignatureStatus.cs
AppControl Manager/Logging/: Logger.cs
AppControl Manager/Logic/: AllCertificatesGrabber.cs  AppSettings.cs  AppThemeManager.cs  AppUpdate.cs  CertificateCreator.cs  CertificateHelper.cs  CheckPolicyDeploymentStatus.cs  CiToolHelper.cs  CodeIntegrityInfo.cs  ConfigureISGServices.cs  Crypt32CertCN.cs  DeviceGuardInfo.cs  DirectorySelector.cs  EventLogUtility.cs  FileCertificateInfoCol.cs  FileDialogHelper.cs  FileDirectoryPathComparer.cs  GetExtendedFileAttrib.cs  GetFilesFast.cs  GetOpusData.cs  GlobalVars.cs  IconsStyleManager.cs  MainWindowViewModel.cs  MeowOpener.cs  MoveUserModeToKernelMode.cs  NavigationBackgroundManager.cs  NavigationViewLocationManager.cs  PageHashCalc.cs  PolicyFileSigningStatusDetection.cs  PolicyMerger.cs  PolicyToCIPConverter.cs  ProcessStarter.cs  RemoveSupplementalSigners.cs  SecHttpClient.cs  SecureStringComparer.cs  SignToolHelper.cs  SnapBackGuarantee.cs  SoundManager.cs  StagingArea.cs  SupplementalForSelf.cs  (+7 more)
AppControl Manager/Main/: AppControlSimulation.cs  AppIDTagging.cs  BasePolicyCreator.cs  CiFileHash.cs  CiPolicyTest.cs  GetCIPolicySetting.cs  GetCiFileHashes.cs  SetCiRuleOptions.cs  TestCiPolicy.cs  UserConfiguration.cs
AppControl Manager/MicrosoftGraph/: AssignmentPayload.cs  AuthenticatedAccounts.cs  AuthenticationCompanion.cs  AuthenticationContext.cs  DeviceConfigurationPoliciesResponse.cs  DeviceConfigurationPolicy.cs  Group.cs  GroupCreatePayload.cs  IGraphAuthHost.cs  IntuneGroupItemListView.cs  IntuneJsonContext.cs  MSGraphJsonContext.cs  Main.cs  OmaSettingBase64.cs  QueryPayload.cs  SignInMethods.cs  ThreadSafeObservableCollection.cs  (+2 more)
(+2652 files in other folders)
