[package]
name = "ResourceValidator"
version = "1.0.0"
edition = "2024"
authors = ["Violet Hansen"]
description = "Performs thorough validation on resource files and related logics. See comments in the code for more info."
license = "MIT"
homepage = "https://github.com/HotCakeX/Harden-Windows-Security"
repository = "https://github.com/HotCakeX/Harden-Windows-Security"
publish = false
rust-version = "1.88" # Enforces minimum required installed Rust version

[profile.release]
codegen-units = 1
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"
overflow-checks = true
lto = "fat"
incremental = true

[dependencies]
regex = "*"
quick-xml = "*"
anyhow = "*"

[[bin]]
# Binary for X64 target.
name = "ResourceValidator-X64"
path = "src/main.rs"

[[bin]]
# Binary for ARM64 target.
name = "ResourceValidator-ARM64"
path = "src/main.rs"
