[package]
name = "binary_security_analyzer"
version = "1.0.0"
edition = "2024"
authors = ["Violet Hansen"]
license = "MIT"
homepage = "https://github.com/HotCakeX/Harden-Windows-Security"
repository = "https://github.com/HotCakeX/Harden-Windows-Security"
publish = false
rust-version = "1.90"

[lib]
name = "binary_security_analyzer"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"
lto = "fat"
incremental = false
panic = "unwind"
