[package]
name = "DeviceGuardWMIRetriever"
version = "1.0.0"
description = "Library used to return serialized JSON string of the Device Guard configurations retrieved via WMI."
keywords = ["WMI", "Windows", "Security"]
categories = ["API bindings", "Security"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
documentation.workspace = true

[dependencies]
windows = { version = "*", features = [    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Wmi"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[[bin]]
# Binary for X64 target.
name = "DeviceGuardWMIRetriever-X64"
path = "src/main.rs"

[[bin]]
# Binary for ARM64 target.
name = "DeviceGuardWMIRetriever-ARM64"
path = "src/main.rs"
