[package]
name = "WMI"
version = "1.0.0"
edition = "2024"
description = "This cargo package retrieves the Microsoft Defender configurations via WMI and displays their names and types on the console."
documentation = "https://github.com/HotCakeX/Harden-Windows-Security"
homepage = "https://github.com/HotCakeX/Harden-Windows-Security"
repository = "https://github.com/HotCakeX/Harden-Windows-Security"
license = "MIT"
keywords = ["WMI", "Windows", "Security"]
categories = ["API bindings", "Security"]
publish = false
rust-version = "1.88" # Enforces minimum required installed Rust version

[profile.release]
codegen-units = 1
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"
overflow-checks = true
lto = "fat"
incremental = true

[dependencies.windows]
version = "*"
features = [
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Wmi",
]