[package]
name = "WMI_Types"
version = "1.0.0"
description = "This cargo package retrieves the Microsoft Defender configurations via WMI and displays their names and types on the console."
keywords = ["WMI", "Windows", "Security"]
categories = ["API bindings", "Security"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
documentation.workspace = true

[dependencies.windows]
version = "*"
features = [
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Wmi",
]